frontend/CorePerfDSL/parser_gen/CorePerfDSLParser.py
# Generated from CorePerfDSL.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CorePerfDSLParser ( Parser ):

    grammarFileName = "CorePerfDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'ConnectorModel'", "'{'", "','", "'}'", 
                     "'('", "'trace'", "':'", "'link'", "'connectorIn'", 
                     "'connectorOut'", "')'", "'ResourceModel'", "'TraceValue'", 
                     "'MicroactionMapping'", "'InstrGroup'", "'CorePerfModel'", 
                     "'use'", "'Pipeline'", "'assign'", "'Resource'", "'='", 
                     "'Microaction'", "'->'", "'Stage'", "'Connector'", 
                     "'virtual'", "<INVALID>", "<INVALID>", "'[ALL]'", "'[?]'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "INT", 
                      "KEYWORD_ALL", "KEYWORD_REST", "ML_COMMENT", "SL_COMMENT", 
                      "WS" ]

    RULE_description_context = 0
    RULE_corePerfModel_sec = 1
    RULE_externModel_sec = 2
    RULE_instruction_sec = 3
    RULE_connectorModel_def = 4
    RULE_connectorModel = 5
    RULE_resourceModel_def = 6
    RULE_resourceModel = 7
    RULE_traceValue_def = 8
    RULE_traceValue = 9
    RULE_microactionMapping_def = 10
    RULE_microactionMapping = 11
    RULE_instrGroup_def = 12
    RULE_instrGroup = 13
    RULE_corePerfModel_def = 14
    RULE_corePerfModel = 15
    RULE_pipeline_def = 16
    RULE_pipeline = 17
    RULE_stage_def = 18
    RULE_stage = 19
    RULE_microaction_def = 20
    RULE_microaction = 21
    RULE_connector_def = 22
    RULE_connector = 23
    RULE_resource_def = 24
    RULE_resource = 25
    RULE_virtual_def = 26
    RULE_virtual = 27
    RULE_instruction_ref = 28
    RULE_connector_ref = 29
    RULE_traceValue_ref = 30
    RULE_resourceModel_ref = 31
    RULE_connectorModel_ref = 32
    RULE_resource_ref = 33
    RULE_virResource_ref = 34
    RULE_nonVirResource_ref = 35
    RULE_resourceOrConnector_ref = 36
    RULE_microaction_ref = 37
    RULE_virMicroaction_ref = 38
    RULE_nonVirMicroaction_ref = 39
    RULE_instructionOrInstrGroup_ref = 40
    RULE_stage_ref = 41
    RULE_pipeline_ref = 42

    ruleNames =  [ "description_context", "corePerfModel_sec", "externModel_sec", 
                   "instruction_sec", "connectorModel_def", "connectorModel", 
                   "resourceModel_def", "resourceModel", "traceValue_def", 
                   "traceValue", "microactionMapping_def", "microactionMapping", 
                   "instrGroup_def", "instrGroup", "corePerfModel_def", 
                   "corePerfModel", "pipeline_def", "pipeline", "stage_def", 
                   "stage", "microaction_def", "microaction", "connector_def", 
                   "connector", "resource_def", "resource", "virtual_def", 
                   "virtual", "instruction_ref", "connector_ref", "traceValue_ref", 
                   "resourceModel_ref", "connectorModel_ref", "resource_ref", 
                   "virResource_ref", "nonVirResource_ref", "resourceOrConnector_ref", 
                   "microaction_ref", "virMicroaction_ref", "nonVirMicroaction_ref", 
                   "instructionOrInstrGroup_ref", "stage_ref", "pipeline_ref" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    ID=27
    INT=28
    KEYWORD_ALL=29
    KEYWORD_REST=30
    ML_COMMENT=31
    SL_COMMENT=32
    WS=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Description_contextContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CorePerfDSLParser.EOF, 0)

        def corePerfModel_sec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CorePerfDSLParser.CorePerfModel_secContext)
            else:
                return self.getTypedRuleContext(CorePerfDSLParser.CorePerfModel_secContext,i)


        def externModel_sec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CorePerfDSLParser.ExternModel_secContext)
            else:
                return self.getTypedRuleContext(CorePerfDSLParser.ExternModel_secContext,i)


        def instruction_sec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CorePerfDSLParser.Instruction_secContext)
            else:
                return self.getTypedRuleContext(CorePerfDSLParser.Instruction_secContext,i)


        def getRuleIndex(self):
            return CorePerfDSLParser.RULE_description_context

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDescription_context" ):
                listener.enterDescription_context(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDescription_context" ):
                listener.exitDescription_context(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDescription_context" ):
                return visitor.visitDescription_context(self)
            else:
                return visitor.visitChildren(self)




    def description_context(self):

        localctx = CorePerfDSLParser.Description_contextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_description_context)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CorePerfDSLParser.T__0) | (1 << CorePerfDSLParser.T__11) | (1 << CorePerfDSLParser.T__12) | (1 << CorePerfDSLParser.T__13) | (1 << CorePerfDSLParser.T__14) | (1 << CorePerfDSLParser.T__15) | (1 << CorePerfDSLParser.T__17) | (1 << CorePerfDSLParser.T__19) | (1 << CorePerfDSLParser.T__21) | (1 << CorePerfDSLParser.T__23) | (1 << CorePerfDSLParser.T__24) | (1 << CorePerfDSLParser.T__25))) != 0):
                self.state = 89
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [CorePerfDSLParser.T__15, CorePerfDSLParser.T__17, CorePerfDSLParser.T__19, CorePerfDSLParser.T__21, CorePerfDSLParser.T__23, CorePerfDSLParser.T__24, CorePerfDSLParser.T__25]:
                    self.state = 86
                    self.corePerfModel_sec()
                    pass
                elif token in [CorePerfDSLParser.T__0, CorePerfDSLParser.T__11, CorePerfDSLParser.T__12]:
                    self.state = 87
                    self.externModel_sec()
                    pass
                elif token in [CorePerfDSLParser.T__13, CorePerfDSLParser.T__14]:
                    self.state = 88
                    self.instruction_sec()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self.match(CorePerfDSLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CorePerfModel_secContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def virtual_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.Virtual_defContext,0)


        def connector_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.Connector_defContext,0)


        def resource_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.Resource_defContext,0)


        def microaction_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.Microaction_defContext,0)


        def stage_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.Stage_defContext,0)


        def pipeline_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.Pipeline_defContext,0)


        def corePerfModel_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.CorePerfModel_defContext,0)


        def getRuleIndex(self):
            return CorePerfDSLParser.RULE_corePerfModel_sec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCorePerfModel_sec" ):
                listener.enterCorePerfModel_sec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCorePerfModel_sec" ):
                listener.exitCorePerfModel_sec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCorePerfModel_sec" ):
                return visitor.visitCorePerfModel_sec(self)
            else:
                return visitor.visitChildren(self)




    def corePerfModel_sec(self):

        localctx = CorePerfDSLParser.CorePerfModel_secContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_corePerfModel_sec)
        try:
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CorePerfDSLParser.T__25]:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.virtual_def()
                pass
            elif token in [CorePerfDSLParser.T__24]:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.connector_def()
                pass
            elif token in [CorePerfDSLParser.T__19]:
                self.enterOuterAlt(localctx, 3)
                self.state = 98
                self.resource_def()
                pass
            elif token in [CorePerfDSLParser.T__21]:
                self.enterOuterAlt(localctx, 4)
                self.state = 99
                self.microaction_def()
                pass
            elif token in [CorePerfDSLParser.T__23]:
                self.enterOuterAlt(localctx, 5)
                self.state = 100
                self.stage_def()
                pass
            elif token in [CorePerfDSLParser.T__17]:
                self.enterOuterAlt(localctx, 6)
                self.state = 101
                self.pipeline_def()
                pass
            elif token in [CorePerfDSLParser.T__15]:
                self.enterOuterAlt(localctx, 7)
                self.state = 102
                self.corePerfModel_def()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExternModel_secContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def traceValue_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.TraceValue_defContext,0)


        def connectorModel_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.ConnectorModel_defContext,0)


        def resourceModel_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.ResourceModel_defContext,0)


        def getRuleIndex(self):
            return CorePerfDSLParser.RULE_externModel_sec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExternModel_sec" ):
                listener.enterExternModel_sec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExternModel_sec" ):
                listener.exitExternModel_sec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExternModel_sec" ):
                return visitor.visitExternModel_sec(self)
            else:
                return visitor.visitChildren(self)




    def externModel_sec(self):

        localctx = CorePerfDSLParser.ExternModel_secContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_externModel_sec)
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CorePerfDSLParser.T__12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.traceValue_def()
                pass
            elif token in [CorePerfDSLParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.connectorModel_def()
                pass
            elif token in [CorePerfDSLParser.T__11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.resourceModel_def()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Instruction_secContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instrGroup_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.InstrGroup_defContext,0)


        def microactionMapping_def(self):
            return self.getTypedRuleContext(CorePerfDSLParser.MicroactionMapping_defContext,0)


        def getRuleIndex(self):
            return CorePerfDSLParser.RULE_instruction_sec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruction_sec" ):
                listener.enterInstruction_sec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruction_sec" ):
                listener.exitInstruction_sec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction_sec" ):
                return visitor.visitInstruction_sec(self)
            else:
                return visitor.visitChildren(self)




    def instruction_sec(self):

        localctx = CorePerfDSLParser.Instruction_secContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_instruction_sec)
        try:
            self.state = 112
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CorePerfDSLParser.T__14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.instrGroup_def()
                pass
            elif token in [CorePerfDSLParser.T__13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.microactionMapping_def()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConnectorModel_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def connectorModel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CorePerfDSLParser.ConnectorModelContext)
            else:
                return self.getTypedRuleContext(CorePerfDSLParser.ConnectorModelContext,i)


        def getRuleIndex(self):
            return CorePerfDSLParser.RULE_connectorModel_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConnectorModel_def" ):
                listener.enterConnectorModel_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConnectorModel_def" ):
                listener.exitConnectorModel_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConnectorModel_def" ):
                return visitor.visitConnectorModel_def(self)
            else:
                return visitor.visitChildren(self)




    def connectorModel_def(self):

        localctx = CorePerfDSLParser.ConnectorModel_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_connectorModel_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(CorePerfDSLParser.T__0)
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CorePerfDSLParser.ID]:
                self.state = 115
                self.connectorModel()
                pass
            elif token in [CorePerfDSLParser.T__1]:
                self.state = 116
                self.match(CorePerfDSLParser.T__1)
                self.state = 117
                self.connectorModel()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CorePerfDSLParser.T__2:
                    self.state = 118
                    self.match(CorePerfDSLParser.T__2)
                    self.state = 119
                    self.connectorModel()
                    self.state = 124
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 125
                self.match(CorePerfDSLParser.T__3)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConnectorModelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self._traceValue_ref = None # TraceValue_refContext
            self.traceVals = list() # of TraceValue_refContexts
            self.link = None # Token
            self._connector_ref = None # Connector_refContext
            self.inCons = list() # of Connector_refContexts
            self.outCons = list() # of Connector_refContexts

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CorePerfDSLParser.ID)
            else:
                return self.getToken(CorePerfDSLParser.ID, i)

        def traceValue_ref(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CorePerfDSLParser.TraceValue_refContext)
            else:
                return self.getTypedRuleContext(CorePerfDSLParser.TraceValue_refContext,i)


        def connector_ref(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CorePerfDSLParser.Connector_refContext)
            else:
                return self.getTypedRuleContext(CorePerfDSLParser.Connector_refContext,i)


        def getRuleIndex(self):
            return CorePerfDSLParser.RULE_connectorModel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConnectorModel" ):
                listener.enterConnectorModel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConnectorModel" ):
                listener.exitConnectorModel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConnectorModel" ):
                return visitor.visitConnectorModel(self)
            else:
                return visitor.visitChildren(self)




    def connectorModel(self):

        localctx = CorePerfDSLParser.ConnectorModelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_connectorModel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            localctx.name = self.match(CorePerfDSLParser.ID)
            self.state = 130
            self.match(CorePerfDSLParser.T__4)
            self.state = 184
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CorePerfDSLParser.T__5) | (1 << CorePerfDSLParser.T__7) | (1 << CorePerfDSLParser.T__8) | (1 << CorePerfDSLParser.T__9))) != 0):
                self.state = 182
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [CorePerfDSLParser.T__5]:
                    self.state = 131
                    self.match(CorePerfDSLParser.T__5)
                    self.state = 132
                    self.match(CorePerfDSLParser.T__6)
                    self.state = 145
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [CorePerfDSLParser.ID]:
                        self.state = 133
                        localctx._traceValue_ref = self.traceValue_ref()
                        localctx.traceVals.append(localctx._traceValue_ref)
                        pass
                    elif token in [CorePerfDSLParser.T__1]:
                        self.state = 134
                        self.match(CorePerfDSLParser.T__1)
                        self.state = 135
                        localctx._traceValue_ref = self.traceValue_ref()
                        localctx.traceVals.append(localctx._traceValue_ref)
                        self.state = 140
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==CorePerfDSLParser.T__2:
                            self.state = 136
                            self.match(CorePerfDSLParser.T__2)
                            self.state = 137
                            localctx._traceValue_ref = self.traceValue_ref()
                            localctx.traceVals.append(localctx._traceValue_ref)
                            self.state = 142
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 143
                        self.match(CorePerfDSLParser.T__3)
                        pass
                    else:
                        raise NoViableAltException(self)

                    pass
                elif token in [CorePerfDSLParser.T__7]:
                    self.state = 147
                    self.match(CorePerfDSLParser.T__7)
                    self.state = 148
                    self.match(CorePerfDSLParser.T__6)
                    self.state = 149
                    localctx.link = self.match(CorePerfDSLParser.ID)
                    pass
                elif token in [CorePerfDSLParser.T__8]:
                    self.state = 150
                    self.match(CorePerfDSLParser.T__8)
                    self.state = 151
                    self.match(CorePerfDSLParser.T__6)
                    self.state = 164
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [CorePerfDSLParser.ID]:
                        self.state = 152
                        localctx._connector_ref = self.connector_ref()
                        localctx.inCons.append(localctx._connector_ref)
                        pass
                    elif token in [CorePerfDSLParser.T__1]:
                        self.state = 153
                        self.match(CorePerfDSLParser.T__1)
                        self.state = 154
                        localctx._connector_ref = self.connector_ref()
                        localctx.inCons.append(localctx._connector_ref)
                        self.state = 159
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==CorePerfDSLParser.T__2:
                            self.state = 155
                            self.match(CorePerfDSLParser.T__2)
                            self.state = 156
                            localctx._connector_ref = self.connector_ref()
                            localctx.inCons.append(localctx._connector_ref)
                            self.state = 161
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 162
                        self.match(CorePerfDSLParser.T__3)
                        pass
                    else:
                        raise NoViableAltException(self)

                    pass
                elif token in [CorePerfDSLParser.T__9]:
                    self.state = 166
                    self.match(CorePerfDSLParser.T__9)
                    self.state = 167
                    self.match(CorePerfDSLParser.T__6)
                    self.state = 180
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [CorePerfDSLParser.ID]:
                        self.state = 168
                        localctx._connector_ref = self.connector_ref()
                        localctx.outCons.append(localctx._connector_ref)
                        pass
                    elif token in [CorePerfDSLParser.T__1]:
                        self.state = 169
                        self.match(CorePerfDSLParser.T__1)
                        self.state = 170
                        localctx._connector_ref = self.connector_ref()
                        localctx.outCons.append(localctx._connector_ref)
                        self.state = 175
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==CorePerfDSLParser.T__2:
                            self.state = 171
                            self.match(CorePerfDSLParser.T__2)
                            self.state = 172
                            localctx._connector_ref = self.connector_ref()
                            localctx.outCons.append(localctx._connector_ref)
                            self.state = 177
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 178
                        self.match(CorePerfDSLParser.T__3)
                        pass
                    else:
                        raise NoViableAltException(self)

                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 186
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 187
            self.match(CorePerfDSLParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ResourceModel_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def resourceModel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CorePerfDSLParser.ResourceModelContext)
            else:
                return self.getTypedRuleContext(CorePerfDSLParser.ResourceModelContext,i)


        def getRuleIndex(self):
            return CorePerfDSLParser.RULE_resourceModel_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterResourceModel_def" ):
                listener.enterResourceModel_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitResourceModel_def" ):
                listener.exitResourceModel_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitResourceModel_def" ):
                return visitor.visitResourceModel_def(self)
            else:
                return visitor.visitChildren(self)




    def resourceModel_def(self):

        localctx = CorePerfDSLParser.ResourceModel_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_resourceModel_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(CorePerfDSLParser.T__11)
            self.state = 202
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CorePerfDSLParser.ID]:
                self.state = 190
                self.resourceModel()
                pass
            elif token in [CorePerfDSLParser.T__1]:
                self.state = 191
                self.match(CorePerfDSLParser.T__1)
                self.state = 192
                self.resourceModel()
                self.state = 197
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CorePerfDSLParser.T__2:
                    self.state = 193
                    self.match(CorePerfDSLParser.T__2)
                    self.state = 194
                    self.resourceModel()
                    self.state = 199
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 200
                self.match(CorePerfDSLParser.T__3)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ResourceModelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self._traceValue_ref = None # TraceValue_refContext
            self.traceVals = list() # of TraceValue_refContexts
            self.link = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CorePerfDSLParser.ID)
            else:
                return self.getToken(CorePerfDSLParser.ID, i)
